<resources>

        <!-- PANTALLA LOGIN 1.0 -->
        <string name="app_name">BioSmart</string>
        <string name="login_titulo_sub">MONITOREO MÉDICO INTEGRAL</string>
        <string name="login_iniciar_con">INICIAR SESIÓN CON</string>
        <string name="login_facial">Reconocimiento Facial</string>
        <string name="login_huella">Huella Dactilar</string>
        <string name="login_correo">Correo Electrónico</string>
        <string name="login_acceso_rapido">Acceso Rápido</string>
        <string name="login_acceso_correo">Acceda con su correo y contraseña</string>
        <string name="login_registrar">Registrarse</string>

        <!-- PANTALLA LOGIN 1.0  RECONOCIMIENTO FACIAL-->
        <string name="facial_instruccion">Poner rostro centrado en la cámara</string>
        <string name="facial_cancelar">Cancelar</string>

        <!-- PANTALLA LOGIN 1.0 HUELLA DACTILAR -->
        <string name="huella_instruccion">Escanea tu huella Digital</string>

        <!-- PANTALLA LOGIN 1.0 CORREO ELECTRONICO -->
        <string name="correo_label">INGRESE SU CORREO</string>
        <string name="pass_label">INGRESE SU CONTRASEÑA</string>
        <string name="olvido_pass">¿HAZ OLVIDADO TU CONTRASEÑA?</string>
        <string name="btn_iniciar_sesion">Iniciar sesión</string>

        <string name="menu_inicio">Inicio</string>
        <string name="menu_qr">Escanear QR</string>
        <string name="menu_resultados">Resultados</string>
        <string name="menu_reporte">Reporte</string>

        <string name="hello_blank_fragment">Hello blank fragment</string>

        <!-- PANTALLA TEMPERATURA -->
        <string name="temp_waiting">Espera unos minutos para finalizar tu medición</string>
        <string name="temp_label">TEMPERATURA</string>
        <string name="temp_unit">Celsius</string>
        <string name="temp_value_default">00.0°</string>
        <string name="temp_progress_label">Progreso de medición</string>
        <string name="temp_btn_finish">Finalizar medición</string>

        <!-- MENU -->
        <string name= "men_resultado">Resultado</string>
        <string name= "men_Perfil">Perfil</string>
        <string name= "men_inicio">Inicio</string>
        <string name= "men_reporte">Reporte</string>
        <string name= "men_qr">QR</string>

        <!-- Pantalla de Registro -->
                <string name="label_nombre_completo">NOMBRE COMPLETO</string>
                <string name="hint_nombre">Tu nombre aquí</string>
                <string name="label_correo_electronico">CORREO ELECTRÓNICO</string>
                <string name="hint_correo">ejemplo@correo.com</string>
                <string name="label_contrasena">CONTRASEÑA</string>
                <string name="label_fecha_nacimiento">FECHA DE NACIMIENTO</string>
                <string name="hint_fecha_nacimiento">Toca para seleccionar</string>
                <string name="btn_registrarme">Registrarme</string>
                <string name="btn_cancelar">Cancelar</string>
                <string name="error_campos_vacios">Por favor, completa todos los campos</string>
                <string name="error_password_corta">La contraseña debe tener al menos 6 caracteres</string>
                <string name="registro_exitoso">¡Registro exitoso!</string>
</resources>